--- a/configure.in
+++ b/configure.in
@@ -1981,6 +1981,14 @@ test "$CONFIG_SND_RTCTIMER" = "m" && AC_DEFINE(CONFIG_SND_RTCTIMER_MODULE)
 CONFIG_RTC=$CONFIG_SND_RTCTIMER
 AC_SUBST(CONFIG_RTC)
 
+dnl Check for HPET support
+CHECK_KERNEL_CONFIG(CONFIG_HPET, [HPET support])
+CONFIG_SND_HPET=""
+test "$CONFIG_HPET" = "y" && CONFIG_SND_HPET="m"
+AC_SUBST(CONFIG_SND_HPET)
+test "$CONFIG_SND_HPET" = "m" && AC_DEFINE(CONFIG_SND_HPET_MODULE)
+AC_SUBST(CONFIG_HPET)
+
 dnl Check for procfs
 CHECK_KERNEL_CONFIG(CONFIG_PROC_FS, [Procfs support])
 AC_SUBST(CONFIG_PROC_FS)
