--- a/include/autoconf-extra.h.in
+++ b/include/autoconf-extra.h.in
@@ -4,6 +4,7 @@
 #undef CONFIG_SND_MODULE
 #undef CONFIG_SND_BIT32_EMUL_MODULE
 #undef CONFIG_SND_RTCTIMER_MODULE
+#undef CONFIG_SND_HPET_MODULE
 #undef CONFIG_SND_SEQUENCER_MODULE
 #undef CONFIG_SND_SEQ_DUMMY_MODULE
 #undef CONFIG_SND_OSSEMUL
