--- a/include/config.h.in
+++ b/include/config.h.in
@@ -18,6 +18,7 @@
 #undef CONFIG_SND_DEBUG_DETECT
 #undef CONFIG_SND_BIT32_EMUL_MODULE
 #undef CONFIG_SND_RTCTIMER_MODULE
+#undef CONFIG_SND_HPET_MODULE
 #undef CONFIG_SND_SEQ_DUMMY_MODULE
 
 /* card-dependent section */
