--- a/configure.in
+++ b/configure.in
@@ -94,7 +94,7 @@ AC_MSG_RESULT($kernelbuild)
 dnl Check for kernel version...
 AC_MSG_CHECKING(for kernel version)
 if ! test -r $CONFIG_SND_KERNELDIR/include/linux/version.h; then
-  if test -n "$kernelbuild" -a ! -f $kernelbuild/include/linux/version.h; then
+  if test -z "$kernelbuild" -o ! -f $kernelbuild/include/linux/version.h; then
   cat << EOF
 The file $CONFIG_SND_KERNELDIR/include/linux/version.h does not exist.
 Please, install the package with full kernel sources for your distribution
