--- a/Makefile.conf.in
+++ b/Makefile.conf.in
@@ -54,6 +54,10 @@ INCLUDE		= -I$(TOPDIR)/include @EXTRA_INCLUDES@ @KERNEL_INC@
 CFLAGS		= $(MODFLAGS) $(INCLUDE) $(c_opts) -Wall -Wstrict-prototypes \
 	-fomit-frame-pointer -Wno-trigraphs -O2 -fno-strict-aliasing -fno-common \
 	-pipe -DALSA_BUILD -nostdinc -iwithprefix include
+ifdef CONFIG_SND_MVERSION
+CFLAGS += -DMODVERSIONS -include $(CONFIG_SND_KERNELDIR)/include/linux/modversions.h
+endif
+CPPFLAGS = $(MODFLAGS) $(INCLUDE) $(c_opts) -DALSA_BUILD -nostdinc -iwithprefix include
 MAKE		+= $(m_opts)
 SNDVERSIONS	= $(TOPDIR)/include/sndversions.h
 DEXPORT		= $(TOPDIR)/include/modules
