maestro3 - add patch for 2.2.x kernels
Fix compilation on 2.2.x kernels that do not have the fields
subsystem_{vendor,device} in struct pci.

--- a/pci/Makefile
+++ b/pci/Makefile
@@ -9,7 +9,7 @@ include $(SND_TOPDIR)/Makefile.conf
 # ALSA extra code
 #
 
-clean-files := bt87x.c intel8x0.c
+clean-files := bt87x.c intel8x0.c maestro3.c
 
 obj-$(CONFIG_SND) += pdplus/ pcxhr/ echoaudio/
 
@@ -29,3 +29,4 @@ include $(SND_TOPDIR)/Rules.make
 
 bt87x.c: bt87x.patch $(SND_TOPDIR)/alsa-kernel/pci/bt87x.c
 intel8x0.c: intel8x0.patch $(SND_TOPDIR)/alsa-kernel/pci/intel8x0.c
+maestro3.c: maestro3.patch $(SND_TOPDIR)/alsa-kernel/pci/maestro3.c
