Add hda_codec.c to $clean-files
Add hda_codec.c to $clean-files.

--- a/pci/hda/Makefile
+++ b/pci/hda/Makefile
@@ -5,6 +5,8 @@ endif
 include $(SND_TOPDIR)/toplevel.config
 include $(SND_TOPDIR)/Makefile.conf
 
+clean-files := hda_codec.c
+
 export-objs  := hda_codec.o
 
 EXTRA_CFLAGS += -I$(SND_TOPDIR)/alsa-kernel/pci/hda
