--- a/include/config.h.in
+++ b/include/config.h.in
@@ -60,3 +60,4 @@
 #undef CONFIG_HAVE_MSLEEP_INTERRUPTIBLE
 #undef CONFIG_HAVE_PCI_DEV_PRESENT
 #undef CONFIG_SND_HAVE_NEW_IOCTL
+#undef CONFIG_SND_HAVE_CLASS_SIMPLE
