--- a/include/config.h.in
+++ b/include/config.h.in
@@ -61,3 +61,4 @@
 #undef CONFIG_HAVE_PCI_DEV_PRESENT
 #undef CONFIG_SND_HAVE_NEW_IOCTL
 #undef CONFIG_SND_HAVE_CLASS_SIMPLE
+#undef CONFIG_CREATE_WORKQUEUE_FLAGS
