--- a/configure.in
+++ b/configure.in
@@ -1744,9 +1744,36 @@ if test "$CONFIG_HAVE_KCALLOC" = "1"; then
   AC_DEFINE(CONFIG_HAVE_KCALLOC)
 fi
 
+dnl Check for kstrdup()
+AC_MSG_CHECKING(for kstrdup)
+kstrdup="0"
+ac_save_CFLAGS="$CFLAGS"
+ac_save_CC="$CC"
+CFLAGS="$KERNEL_CHECK_CFLAGS"
+CC=$KCC
+AC_TRY_COMPILE([
+#define __KERNEL__
+#include <linux/config.h>
+#include <linux/string.h>
+],[
+  char * (*func)(const char *, int);
+  func = kstrdup;
+],
+    AC_MSG_RESULT("yes");kstrdup="1",
+    AC_MSG_RESULT("no");kstrdup="0",
+    AC_MSG_RESULT("unknown");kstrdup="0"
+)
+CFLAGS=$ac_save_CFLAGS
+CC=$ac_save_CC
+CONFIG_HAVE_KSTRDUP=$kstrdup
+dnl AC_SUBST(CONFIG_HAVE_KSTRDUP)
+if test "$CONFIG_HAVE_KSTRDUP" = "1"; then
+  AC_DEFINE(CONFIG_HAVE_KSTRDUP)
+fi
+
 dnl Check for create_workqueue() with flags
 AC_MSG_CHECKING(for create_workqueue with flags)
-kcalloc="0"
+workqueue2="0"
 ac_save_CFLAGS="$CFLAGS"
 ac_save_CC="$CC"
 CFLAGS="$KERNEL_CHECK_CFLAGS"
