--- a/include/config.h.in
+++ b/include/config.h.in
@@ -52,6 +52,7 @@
 /* 2.4/2.6 kernels */
 #undef CONFIG_HAVE_PCI_CONSISTENT_DMA_MASK
 #undef CONFIG_HAVE_KCALLOC
+#undef CONFIG_HAVE_KSTRDUP
 #undef CONFIG_HAVE_IO_REMAP_PFN_RANGE
 #undef CONFIG_OLD_IO_REMAP_PAGE_RANGE
 #undef CONFIG_HAVE_PCI_SAVED_CONFIG
