--- a/include/config.h.in
+++ b/include/config.h.in
@@ -59,6 +59,7 @@
 #undef CONFIG_HAVE_NEW_PCI_SAVE_STATE
 #undef CONFIG_HAVE_MSLEEP
 #undef CONFIG_HAVE_MSLEEP_INTERRUPTIBLE
+#undef CONFIG_HAVE_MSECS_TO_JIFFIES
 #undef CONFIG_HAVE_PCI_DEV_PRESENT
 #undef CONFIG_SND_HAVE_NEW_IOCTL
 #undef CONFIG_SND_HAVE_CLASS_SIMPLE
