fix msecs_to_jiffies wrapper
In the script checking for the presence of msecs_to_jiffies(), fix some
typos, and check <linux/delay.h>, too (for 2.4 kernels).

And the actual implementation of the wrapper was slightly incomplete.

--- a/configure.in
+++ b/configure.in
@@ -598,6 +598,7 @@ CHECK_KERNEL_HEADER(linux/dma-mapping.h)
 CHECK_KERNEL_HEADER(asm/hw_irq.h)
 CHECK_KERNEL_HEADER(linux/device.h)
 CHECK_KERNEL_HEADER(linux/jiffies.h, [#include <linux/sched.h>
+#include <linux/delay.h>
 ])
 CHECK_KERNEL_HEADER(linux/compat.h, [#include \"compat_64.h\"
 ])
@@ -1613,10 +1614,10 @@ fi
 
 dnl Check for msecs_to_jiffies
 AC_MSG_CHECKING(for msecs_to_jiffies)
-msleep="0"
+msecs_to_jiffies="0"
 ac_save_CFLAGS="$CFLAGS"
 ac_save_CC="$CC"
-CFLAGS="$KERNEL_CHECK_CFLAGS"
+CFLAGS="$KERNEL_CHECK_CFLAGS -Iinclude"
 CC=$KCC
 AC_TRY_COMPILE([
 #define __KERNEL__
@@ -1624,7 +1625,7 @@ AC_TRY_COMPILE([
 #include <linux/jiffies.h>
 ],[
   unsigned int (*func)(const unsigned long);
-  func = msec_to_jiffies;
+  func = msecs_to_jiffies;
 ],
     AC_MSG_RESULT("yes");msecs_to_jiffies="1",
     AC_MSG_RESULT("no");msecs_to_jiffies="0",
