Fix compile with RH kernel
Fix compile with RH kernel.  It has its own msecs_to_jiffies()
in linux/time.h.

--- a/configure.in
+++ b/configure.in
@@ -1638,6 +1638,7 @@ AC_TRY_COMPILE([
 #define __KERNEL__
 #include <linux/config.h>
 #include <linux/jiffies.h>
+#include <linux/time.h>
 ],[
   unsigned int (*func)(const unsigned long);
   func = msecs_to_jiffies;
