--- a/include/config.h.in
+++ b/include/config.h.in
@@ -64,3 +64,4 @@
 #undef CONFIG_SND_HAVE_NEW_IOCTL
 #undef CONFIG_SND_HAVE_CLASS_SIMPLE
 #undef CONFIG_CREATE_WORKQUEUE_FLAGS
+#undef CONFIG_HAVE_REGISTER_SOUND_SPECIAL_DEVICE
