--- a/include/linux/pci_ids.h.in
+++ b/include/linux/pci_ids.h.in
@@ -1,4 +1,6 @@
+#ifndef LINUX_2_2
 #include "@CONFIG_SND_KERNELDIR@/include/linux/pci_ids.h"
+#endif
 
 /* bt87x */
 #ifndef PCI_VENDOR_ID_BROOKTREE
