--- a/acore/Kconfig
+++ b/acore/Kconfig
@@ -2,6 +2,12 @@
 config SND_BIT32_EMUL
 	tristate
 
+config SND_DEBUG_MEMORY
+	bool "Debug memory"
+	depends on SND_DEBUG
+	help
+	  Say Y here to enable debugging of memory allocations.
+
 config SND_HPET
 	tristate "High Precision Event Timer support"
 	depends on SND && HPET
